--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.8.0"
   },
   "devDependencies": {
